# Labs

./: .gitignore  CMakeLists.txt  README.md  main.cpp  task1.py  task6.py
